fix: rtl ul/li alignement

--- a/themes/hello-friend-ng/assets/scss/_mixins.scss
+++ b/themes/hello-friend-ng/assets/scss/_mixins.scss
@@ -1,3 +1,15 @@
 @mixin dimmed {
-  opacity: .6;
+  opacity: 0.6;
+}
+
+@mixin rtl($selector: '[dir="rtl"]') {
+  @if & {
+    #{$selector} & {
+      @content;
+    }
+  } @else {
+    #{$selector} {
+      @content;
+    }
+  }
 }
