--- a/themes/hello-friend-ng/assets/scss/_single.scss
+++ b/themes/hello-friend-ng/assets/scss/_single.scss
@@ -1,4 +1,3 @@
-@import 'init/rtl/rtl';
 .post {
   width: 100%;
   max-width: 800px;
@@ -7,6 +6,13 @@
     flex-direction: row-reverse;
     text-align: right;
     padding: 0;
+    ul {
+      direction: rtl;
+      li {
+        direction: rtl;
+        margin-right: 20px;
+      }
+    }
   }
   padding: 20px;
   margin: 20px auto;
@@ -16,7 +22,7 @@
 
   &-date {
     &:after {
-      content: '—';
+      content: "—";
     }
   }
 
@@ -91,7 +97,7 @@
 
     .feather {
       display: inline-block;
-      vertical-align: -.125em;
+      vertical-align: -0.125em;
       width: 1em;
       height: 1em;
     }
@@ -140,18 +146,18 @@
         background: $dark-background;
         color: $dark-color-secondary;
       }
-    
+
       @media (prefers-color-scheme: light) {
         background: $light-background;
         color: $light-color-secondary;
       }
-    
-      [data-theme=dark] & {
+
+      [data-theme="dark"] & {
         background: $dark-background;
         color: $dark-color-secondary;
       }
-    
-      [data-theme=light] & {
+
+      [data-theme="light"] & {
         background: $light-background;
         color: $light-color-secondary;
       }
@@ -202,11 +208,11 @@
     background: $light-background-secondary;
   }
 
-  [data-theme=dark] & {
+  [data-theme="dark"] & {
     background: $dark-background-secondary;
   }
 
-  [data-theme=light] & {
+  [data-theme="light"] & {
     background: $light-background-secondary;
   }
 
